# oxford-loss-landscapes

./: .buildinfo  .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  HESSIAN_GUIDE.md  INSTALL.md  MANIFEST.in  README.md  citation.html  cli.html  contributing.html  examples.html  features.html  genindex.html  index.html  installation.html  license.html  objects.inv  pyproject.toml  requirements.html  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: citation.doctree  cli.doctree  contributing.doctree  environment.pickle  examples.doctree  features.doctree  index.doctree  installation.doctree  license.doctree  requirements.doctree
.github/workflows/: documentation.yml  main.yml  python-app.yml
_sources/: cli.rst.txt  features.rst.txt  index.rst.txt
docs/: README.md  VRPCA_README.md
docs/source/: citation.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  requirements.rst
examples/: README.md  basic_usage.py  cnn_usage.py  comprehensive_hessian_analysis.py  example_loss_landscape_bandgap_Fe_ood.csv  full_hessian_analysis_comparison.py  hessian_analysis_guide.py  hessian_basic_usage.py  hessian_cnn_loss_landscape.py  hessian_eigenvalue_analysis.py  hessian_usage_demo.py  hessian_vector_product_example.py  parallel_usage.py  quick_start.py  simple_hessian_analysis.py  simple_hessian_vrpca_analysis.py  transformer_usage.py  vrpca_hessian_analysis_guide.py
models/: README.md  load_transformer_example.py
scripts/: README.md  README_transformer.md  get_rl_model.py  get_transformer_model.py
src/dashboard/: data_parser.py  model_parser.py
src/hessian/: utilities.py
src/loss_landscapes/: __init__.py  main.py
src/loss_landscapes/metrics/: rl_metrics.py  sl_metrics.py
src/loss_landscapes/model_interface/: model_parameters.py
src/oxford_loss_landscapes/: __init__.py  download_models.py  main.py  parallel_utils.py  utils.py
src/oxford_loss_landscapes/contrib/: connecting_paths.py
src/oxford_loss_landscapes/dashboard/: __init__.py  data_parser.py  gui_loss.py  gui_loss_dash.py  model_parser.py
src/oxford_loss_landscapes/hessian/: __init__.py  hessian.py  hessian_trace.py  utilities.py
src/oxford_loss_landscapes/hessian/vrpca/: __init__.py  algorithms.py  api.py  config.py  hvp.py  types.py  utils.py
src/oxford_loss_landscapes/metrics/: __init__.py  sl_metrics.py
src/oxford_loss_landscapes/model_interface/: model_parameters.py  model_wrapper.py
tests/: README.md  conftest.py  test_basic.py  test_download_models.py  test_examples.py  test_hessian.py  test_hessian_vrpca.py  test_main.py  test_model_wrapper.py  test_parallel.py  test_utils.py
vr_pca/: README.md  __init__.py  combined_scaling_analysis.py  hessian_scaling.py  hessian_scaling_original.py  scaling_analysis.py
