[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oxford-loss-landscapes"
description = "Loss Landscapes for Explainable AI - A library for visualizing and analyzing neural network loss landscapes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Oxford RSE Project Contributors", email = "your.email@example.com"}
]
maintainers = [
    {name = "Oxford RSE Project Contributors", email = "your.email@example.com"}
]
keywords = ["machine learning", "neural networks", "loss landscapes", "explainable ai", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=1.8.0; python_version<'3.13'",
    "torch>=2.5.0; python_version>='3.13'",
    "torchdiffeq>=0.2.0",
    "numpy>=1.19.0,<2.0; python_version<'3.13'",
    "numpy>=2.0; python_version>='3.13'",
    "pandas>=1.3.0",
    "scipy>=1.7.0", 
    "tqdm>=4.60.0",
    "requests>=2.25.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "twine>=6.2.0",
    "build",
    "ipython",
    "ipykernel"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]
transformers = [
    "transformers>=4.20.0",
    "tokenizers>=0.13.0",
    "datasets>=2.0.0",
]
advanced = [
    "plotly>=5.0.0",
    "ipywidgets>=7.6.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.0.0",
    "torchvision>=0.13.0",
]
examples = [
    "torchvision",
    "datasets"
]

[project.urls]
Homepage = "https://github.com/daleas0120/oxford_rse_project4"
Repository = "https://github.com/daleas0120/oxford_rse_project4.git"
"Bug Reports" = "https://github.com/daleas0120/oxford_rse_project4/issues"
Documentation = "https://github.com/daleas0120/oxford_rse_project4#readme"

[project.scripts]
oxford-download-models = "oxford_loss_landscapes.download_models:main"

[tool.setuptools_scm]
write_to = "src/oxford_loss_landscapes/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oxford_loss_landscapes = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
    "src",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
